# blazar-tempest-plugin

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
blazar_tempest_plugin/: config.py
blazar_tempest_plugin/services/reservation/: reservation_client.py
blazar_tempest_plugin/tests/api/: fixtures.py  test_blazar_api.py
blazar_tempest_plugin/tests/api/gabbits/: allocations.yaml  hosts.yaml  leases.yaml
blazar_tempest_plugin/tests/scenario/: manager_freeze.py  resource_reservation_scenario.py  test_flavor_reservation.py  test_host_reservation.py  test_instance_reservation.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/notes/: drop-python38-support-53c1997be1c5f6d9.yaml
releasenotes/source/: conf.py  index.rst
