[metadata]
name = blazar_tempest_plugin
summary = Tempest plugin for Blazar Project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/blazar/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    blazar_tempest_plugin

[entry_points]
tempest.test_plugins =
    blazar_tests = blazar_tempest_plugin.plugin:BlazarTempestPlugin
