[metadata]
name = blazar_tempest_plugin
summary = Tempest plugin for Blazar Project
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/blazar/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    blazar_tempest_plugin

[entry_points]
tempest.test_plugins =
    blazar_tests = blazar_tempest_plugin.plugin:BlazarTempestPlugin
